# health

./: .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  .prettierrc  .yamlfmt  .yamllint  CHANGELOG.md  CODEOWNERS  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  compose-override.yml  compose.override.yml  compose.yml  import_to_redis.py  index.html  pip-requirements.txt  pyproject.toml  renovate.json  requirements-dev-indirect.txt  requirements-dev.in  requirements-dev.txt  requirements-import-indirect.txt  requirements-import.txt  requirements-indirect.txt  requirements.txt  ruff.toml  security-insights.yml  versions.json  vulture_allowlist.py
.allstar/: actions.yaml  branch_protection.yaml  codeowners.yaml  scorecard.yaml
.git-hooks/: commit-msg-dco.sh  mypy-hook.sh  pre-push-hooks.sh  test-hook.sh  verify-signatures.sh
.github/: allowed_signers  dco.yml  dependabot.yml  renovate.json  web-flow.gpg
.github/scorecard/: config.yml
.github/workflows/: codeql.yml  docker-stack.yml  osv-scan.yml  pre_commit_run.yml  release.yml  requirements-maintenance.yml  run-testsuite.yml  scorecard.yml  scripts.yml  sphinx.yml  tests.yml  vulture.yml
.openvex/templates/: README.md  main.openvex.json
backend/: manage.py
backend/apps/: __init__.py
backend/apps/api/: __init__.py  connection.py  models.py  tests.py  urls.py  views.py
backend/apps/workers/: __init__.py  models.py  tests.py
backend/config/: __init__.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/requirements/: base.in  base.txt  tests.in  tests.txt
docker/: Dockerfile.backend  Dockerfile.bats  Dockerfile.docs  Dockerfile.frontend  Dockerfile.frontend.dockerignore  Dockerfile.redis  Dockerfile.redis-init  Dockerfile.redis.dockerignore  Dockerfile.redisinsight  Dockerfile.sandbox  Dockerfile.scripts  Dockerfile.tests  Dockerfile.tests.dockerignore  compose.override.yml  compose.yml  docker-bake.hcl  redis-entrypoint.sh  seccomp-redis.json
docs/: CHEATSHEET.md  Makefile  REDIS.md  REDIS_TLS.md  getting-started.md  pass-secrets.md  pip-tools.md  requirements-indirect.txt  requirements.in  requirements.txt  threat-model.md
docs/source/: .env-example  changelog.md  ci-cd.md  conf.py  connection.rst  contributing.md  cutting-a-release.md  dev-tools.md  dev-tools.rst  dev-workflow.md  docker-redis.md  docker-redis.rst  getting-started.md  getting-started.rst  importer.rst  index.rst  maintainers.md  model.rst  models.rst  notes.rst  pass-secrets.md  pass-secrets.rst  security.md  setup-tls.rst  src.rst  threat-model.md
docs/source/_ext/: react_autodoc.py
docs/source/_static/: custom.css  furo-custom.css
docs/source/_templates/: page.html
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.test.jsx  App.test.tsx  App.tsx  main.tsx
frontend/src/components/: custom.tsx  health-components.tsx
frontend/src/services/: api.js  api.test.ts  api.ts
frontend/src/styles/: dashboard.css  tokens.css
scripts/: Dockerfile  Dockerfile.dockerignore  compile-requirements.sh  compose-wrapper.sh  generate-ci-secrets.sh  generate_certificates.sh  import_to_redis.py  load-ci-secrets.sh  setup-redis.py  setup_logger.py
scripts/ci/requirements-maintenance/: build_dag.py  check_conflicts.py  check_updates.py  conftest.py  recompile.py  test_build_dag.py  test_check_conflicts.py  test_check_updates.py  test_recompile.py  test_summarise.py  utils.py
scripts/ci/requirements_maintenance/: build_dag.py  check_updates.py  recompile.py  summarise.py
scripts/tests/: conftest.py  stubs.bash  test_build_dag.py  test_check_conflicts.py  test_check_updates.py  test_compile_requirements.bats  test_compose_wrapper.bats  test_generate_certificates.bats  test_load_ci_secrets.bats  test_recompile.py  test_setup_logger.py  test_summarise.py
src/: __init__.py  categorical.py  connection.py  importer.py  models.py  pipeline.py  redis_setup.py  requirements.in  requirements.txt  transform.py
src/importer/: __init__.py  categorical.py  connection.py  data_check.py  document_loader.py  importer.py  models.py  parser.py  pipeline.py  requirements-indirect.txt  requirements.in  requirements.txt  response.py  transform.py
src/model/: __init__.py  base.py  category_types.py  correlation_types.py  quantity_types.py
src/models/: __init__.py  categorical_types.py  models.py  quantity_types.py
tests/: Dockerfile  conftest.py  requirements.in  requirements.txt  test_connection.py  test_redis_setup.py
tests/importer/: test_data_check.py  test_document_loader.py  test_importer.py  test_parser.py  test_pipeline.py  test_response.py  test_transform.py
tests/model/: test_base.py  test_category_types.py  test_correlation_types.py  test_quantity_types.py
v0.0.1-alpha/: connection.html  dev-tools.html  docker-redis.html  genindex.html  importer.html  index.html  model.html  objects.inv  pass-secrets.html  py-modindex.html  search.html  searchindex.js
v0.0.1-alpha/_modules/: index.html
v0.0.1-alpha/_modules/src/: connection.html
v0.0.1-alpha/_sources/: connection.rst.txt  dev-tools.rst.txt  index.rst.txt  model.rst.txt  pass-secrets.rst.txt
v0.0.1-alpha/_static/: documentation_options.js
v0.0.1-alpha/_static/tippy/: connection.2a7332ec-d2e3-4289-b5ac-1f2310817aa4.js  dev-tools.3e593ed8-d107-4ff7-966e-c12076d23590.js  dev-tools.b408201a-1c6f-4e60-bc5a-c247dc053c63.js  docker-redis.a203af39-0780-4a47-ae0f-599f6544f3e2.js  docker-redis.f496d9ab-f4c6-48cf-8d94-ac4e4d880d8a.js  importer.739b91a2-8a2c-4967-9596-dcf8f74af6fa.js  importer.8b744fde-026c-466c-8515-f4901cbd3012.js  index.533b5c33-e42a-420e-8290-e1a7b37fa9b9.js  index.ceae8925-4866-4a6e-82b5-3213be965222.js  model.8a15ad04-3881-4746-8517-cc69349a9618.js  model.c575e189-ffb2-4b7a-b5f4-52e0d9de034d.js  pass-secrets.c1b0515b-931c-4e2e-84c5-eb767272632e.js  pass-secrets.f645ea7d-6316-4194-a83d-37ddc074d351.js
(+8 files in other folders)
