[project]
name = "health-analyser"
requires-python = ">=3.12"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    # flake8-builtins
    "A",
    # flake8-annotations
    "ANN",
    # flake8-unused-arguments
    "ARG",
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # pydocstyle
    "D",
    # pycodestyle error
    "E",
    # Pyflakes
    "F",
    # flake8-boolean-trap
    "FBT",
    # isort
    "I",
    # pep8-naming
    "N",
    # NumPy-specific rules
    "NPY",
    # pandas-vet
    "PD",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # pycodestyle warnings
    "W",
]
ignore = [
    # missing type annotation for `self`
    "ANN101",
    # missing type annotation for `cls`
    "ANN102",
    # missing docstring for __init__
    "D107",
]
exclude = [
    "vulture_allowlist.py",
]

[tool.ruff.lint.per-file-ignores]
# Ignore annotations rules and lowercase function names in test directory
"tests/*" = ["ANN", "D", "S101"]
"docs/*" = ["D100"]
"src/model/category_types.py" = ["D101", "D106"]
"src/model/quantity_types.py" = ["D101"]
"backend/config/settings/*.py" = ["F403", "F405"]

[tool.vulture]
# ── Scan targets ──────────────────────────────────────────────────────────────
# List source directories explicitly. Excludes tests/, venv/, migrations/,
# and Docker entrypoint scripts that are invoked by the container runtime
# rather than by Python imports.
paths = [
    "src",
    "backend",
    "vulture_allowlist.py",   # always include so suppressions are validated
]

# ── Confidence threshold ──────────────────────────────────────────────────────
# 80% filters out most false positives from dynamic attribute access while
# still catching genuinely unused functions and variables.
# Lower to 60 temporarily if you want a noisier but more thorough audit.
min_confidence = 80

# ── Ignored names ─────────────────────────────────────────────────────────────
# Patterns matched against the symbol name (not path). Use for framework
# conventions that Vulture cannot trace statically.
# Add entries when Vulture flags something that is used dynamically.
ignore_names = []

# ── Ignored paths ─────────────────────────────────────────────────────────────
# Glob patterns relative to the project root.
ignore_decorators = []

[tool.deptry]
# pep621_dev_dependency_groups would be cleaner once pyproject declares them;
requirements_files = [
    "src/requirements.txt",
    "src/importer/requirements.txt",
    "backend/requirements/base.txt",
]
requirements_files_dev = ["requirements-dev.txt"]
extend_exclude = ["scripts"]
known_first_party = ["importer"]
# deptry can't handle current requirements structure and would flag deps
# imported in requirements.txt with "-r some/requirements.txt" as transitive.
ignore = ["DEP003"]

[tool.deptry.per_rule_ignores]
DEP002 = ["furo"]

[tool.coverage.run]
relative_files = true
source = ["src"]
