[project]
name = "health-analyser"
version = "v0.0.1-alpha"
description = "Personal health data dashboard"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "defusedxml>=0.7.1",
    "numpy>=2.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "redis>=7.4.0",
]

[dependency-groups]
backend = [
    "dj-database-url>=3.1.2",
    "django>=5.2.13",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
]
dev = [
    "deptry>=0.25.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.12",
    "vulture>=2.16",
]
docs = [
    "furo>=2025.12.19",
    "linkify-it-py>=2.1.0",
    "myst-parser>=5.1.0",
    "pyopenssl>=26.2.0",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
    "sphinx-design>=0.7.0",
    "sphinx-tippy>=0.4.3",
]
production = [
    "gunicorn>=26.0.0",
]
test = [
    "coverage>=7.13.5",
    "fakeredis>=2.35.1",
    "parameterized>=0.9.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    # flake8-builtins
    "A",
    # flake8-annotations
    "ANN",
    # flake8-unused-arguments
    "ARG",
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # pydocstyle
    "D",
    # pycodestyle error
    "E",
    # Pyflakes
    "F",
    # flake8-boolean-trap
    "FBT",
    # isort
    "I",
    # pep8-naming
    "N",
    # NumPy-specific rules
    "NPY",
    # pandas-vet
    "PD",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # pycodestyle warnings
    "W",
]
ignore = [
    # missing docstring for __init__
    "D107",
]
exclude = [
    "vulture_allowlist.py",
]

[tool.ruff.lint.per-file-ignores]
# Ignore annotations rules and lowercase function names in test directory
"tests/*" = ["ANN", "D", "S101"]
"docs/*" = ["D100"]
"src/model/category_types.py" = ["D101", "D106"]
"src/model/quantity_types.py" = ["D101"]
"backend/config/settings/*.py" = ["F403", "F405"]
"backend/**/tests.py" = ["D100", "D103", "ANN", "S101"]
"backend/**/test_*.py" = ["D100", "D103", "ANN", "S101"]
"backend/**/*_tests.py" = ["D100", "D103", "ANN", "S101"]
"scripts/tests/*" = ["D101", "D102", "D103", "D205", "ANN", "S101"]

[tool.vulture]
# ── Scan targets ──────────────────────────────────────────────────────────────
# List source directories explicitly. Excludes tests/, venv/, migrations/,
# and Docker entrypoint scripts that are invoked by the container runtime
# rather than by Python imports.
paths = [
    "src",
    "backend",
    "vulture_allowlist.py",   # always include so suppressions are validated
]

exclude = [
    "**/tests.py",
    "**/test_*.py",
    "**/*_tests.py",
    "**/conftest.py",
]

# ── Confidence threshold ──────────────────────────────────────────────────────
# 80% filters out most false positives from dynamic attribute access while
# still catching genuinely unused functions and variables.
# Lower to 60 temporarily if you want a noisier but more thorough audit.
min_confidence = 80

# ── Ignored names ─────────────────────────────────────────────────────────────
# Patterns matched against the symbol name (not path). Use for framework
# conventions that Vulture cannot trace statically.
# Add entries when Vulture flags something that is used dynamically.
ignore_names = []

# ── Ignored paths ─────────────────────────────────────────────────────────────
# Glob patterns relative to the project root.
ignore_decorators = []

[tool.deptry]
known_first_party = ["importer", "src", "setup_logger"]
package_module_name_map = { djangorestframework = "rest_framework" }

[tool.deptry.per_rule_ignores]
DEP002 = ["furo"]
DEP004 = ["pytest", "django", "sphinx", "dj_database_url", "fakeredis", "rest_framework", "dotenv"]

[tool.coverage.run]
relative_files = true
source = ["src"]
